--- a/Css/estilo.css
+++ b/Css/estilo.css
@@ -1,11 +1,20 @@
 body {
     margin: 0 auto;
-    background-color: #FF9500;
     padding: 0 20px 20px 20px;
+    background-color: dimgray;
+}
+
+.fondo {
+    background-image: url("../Imagenes/fondo.jpg");
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
 }
 
 nav {
-    background: blueviolet;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 27px;
     text-align: center;
 }
 
